fix: footer layout on mobile and desktop

--- a/src/app/components/footer.css
+++ b/src/app/components/footer.css
@@ -1,63 +1,61 @@
 .footer {
-  background-color: #1D2F5D;
+  background-color: #1d2f5d;
   width: 100%;
   font-family: 'Helvetica Neue', sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px 0;
   color: white;
+  padding: 20px 0;
+  text-align: center;
 }
 
-.title {
-  text-align: center;
-  font-weight: 550;
-  font-size: 27px;
-  margin: 20px 0;
+.footerContent {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 80%;
+  margin: 0 auto;
+  flex-wrap: wrap;
+}
+
+.follow, .contact {
+  flex: 1;
+  margin: 10px;
 }
 
 .socials {
   display: flex;
   justify-content: center;
   gap: 15px;
-  margin-bottom: 20px;
+  margin-top: 10px;
 }
 
-.logoContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-}
-
-.contact {
-  margin-top: 15px;
+.contact div {
+  margin-top: 10px;
   font-size: 17px;
   font-weight: 400;
 }
 
-.contact p {
-  margin: 5px 0;
+.divider {
+  border-bottom: 3px solid #F0C30F;
+  margin: 20px 0;
 }
 
 .copyright {
-  font-size: 17px;
+  font-size: 15px;
   font-weight: 400;
-  text-align: center;
   margin-top: 20px;
 }
 
 @media (max-width: 600px) {
-  .title {
-    font-size: 22px;
+  .footerContent {
+    flex-direction: column;
+    align-items: center;
   }
 
-  .contact {
-    font-size: 16px;
+  .follow, .contact {
+    margin: 0;
   }
 
-  .copyright {
-    font-size: 16px;
-    padding: 0 10px;
+  .contact div {
+    text-align: center;
   }
 }
